# unified-codex-provider

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml  secret-scan.yml
docs/: OPEN_SOURCE_AUDIT.md
resources/: com.codex.unified-provider-sync.plist.template
scripts/: install-launch-agent.sh  uninstall-launch-agent.sh
src/: auth.rs  auth_refresh.rs  config.rs  history.rs  main.rs  migrate.rs  oauth.rs  provider.rs  service.rs  sessions.rs  setup.rs  sync.rs
tests/: integration_test.rs
