[package]
name = "unified-codex-provider"
version = "0.2.5"
edition = "2021"
description = "Unified provider switching and config sync for Codex"
license = "MIT"
repository = "https://github.com/DestroyedTeam/unified-codex-provider"
homepage = "https://github.com/DestroyedTeam/unified-codex-provider"
readme = "README.md"
keywords = ["codex", "cli", "provider", "profile", "macos"]
categories = ["command-line-utilities", "config"]

[[bin]]
name = "ucp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
toml_edit = "0.22"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs = "5.0"
walkdir = "2.5"
fs2 = "0.4"
filetime = "0.2"
